--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <p>If you're reading this, it's already too late for me. I'm leaving the company, but I can't just walk away without warning you. There’s something in the files. Download the file below, but be careful. I’ve encrypted it to keep it out of the AI’s reach. You'll need to find the password in the binary Morse code within.</p>
         <p>Good luck. And remember, this isn’t just another program. It’s alive.</p>
         <div class="download-link">
-            <a href="encrypted_file.bin" download>Download Encrypted File</a>
+            <a href="encrypted_file.txt" download>Download Encrypted File</a>
         </div>
     </div>
 </body>
