--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             white-space: pre-wrap; /* Preserve spacing for Morse code */
+            text-align: center; /* Center text for readability */
+            font-family: monospace; /* Monospace font for alignment */
         }
     </style>
 </head>
@@ -60,7 +62,46 @@
     </div>
     <div class="morse-code">
         <p>
-            1010000000 0000000000 1100001000 0001110000 0000111100 11111
+            1<br>
+            0<br>
+            1<br>
+            0<br>
+            0<br>
+            0<br>
+            0<br>
+            0<br>
+            0<br>
+            0<br>
+            0<br>
+            0<br>
+            0<br>
+            0<br>
+            1<br>
+            1<br>
+            0<br>
+            0<br>
+            0<br>
+            0<br>
+            0<br>
+            1<br>
+            0<br>
+            0<br>
+            0<br>
+            0<br>
+            1<br>
+            1<br>
+            1<br>
+            0<br>
+            0<br>
+            0<br>
+            0<br>
+            0<br>
+            1<br>
+            1<br>
+            1<br>
+            1<br>
+            1<br>
+            1
         </p>
     </div>
 </body>
