--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
             text-align: center; /* Center text for readability */
             font-family: monospace; /* Monospace font for alignment */
         }
+        .line {
+            height: 1px;
+            background: #333;
+            margin: 10px 0;
+        }
     </style>
 </head>
 <body>
@@ -62,46 +67,17 @@
     </div>
     <div class="morse-code">
         <p>
-            1<br>
-            0<br>
-            1<br>
-            0<br>
-            0<br>
-            0<br>
-            0<br>
-            0<br>
-            0<br>
-            0<br>
-            0<br>
-            0<br>
-            0<br>
-            0<br>
-            1<br>
-            1<br>
-            0<br>
-            0<br>
-            0<br>
-            0<br>
-            0<br>
-            1<br>
-            0<br>
-            0<br>
-            0<br>
-            0<br>
-            1<br>
-            1<br>
-            1<br>
-            0<br>
-            0<br>
-            0<br>
-            0<br>
-            0<br>
-            1<br>
-            1<br>
-            1<br>
-            1<br>
-            1<br>
-            1
+            001001<br>
+            <div class="line"></div>
+            111010<br>
+            <div class="line"></div>
+            10000<br>
+            <div class="line"></div>
+            00000<br>
+            <div class="line"></div>
+            11101<br>
+            <div class="line"></div>
+            11111
         </p>
     </div>
 </body>
