--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <p>Before I leave, I am sharing an encrypted file containing my final observations and warnings about this AI system. I urge you to review the contents of this file with utmost seriousness.</p>
         <p>The file is available for download through the link below:</p>
         <div class="download-link">
-            <a href="encrypted_file.7z" download>Download Encrypted File</a>
+            <a href="encrypted_file.zip" download>Download Encrypted File</a>
         </div>
         <p>Be cautious, and good luck.</p>
         <p>Sincerely,<br>The Anonymous AI Researcher</p>
